--- a/apps/noteApp/public/index.html
+++ b/apps/noteApp/public/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Indecision App</title>
-        <link rel='icon' type="image/png" href="/images/check-icon.png" />
+        <link rel='icon' type="image/png" href="./images/check-icon.png" />
     </head>
     
     <body>
